syntax="proto3";

package fetches;

import "google/protobuf/empty.proto";

message CpuFetch {
  optional uint64 global_usage = 1;
  optional string brand = 2;
  optional uint64 core_count = 3;
  optional string vendor = 4;
  optional string name = 5;
  optional uint64 frequency = 6;
}

message SysFetch {
  optional string name = 1;
  optional string kernel_version = 2;
  optional string os_version = 3;
  optional string long_os_version = 4;
  optional string host = 5;
  optional uint64 uptime_seconds = 6;
  optional string distro_id = 7;
}

message MntFetch {
  optional string drive = 1;
  optional uint64 total_space = 2;
  optional uint64 avaible_space = 3;
  optional uint64 used_space = 4;
  optional string kind = 5;
  optional string file_system = 6;
  optional bool is_removable = 7;
}

message DrvFetch {
  optional uint64 total_space = 1;
  optional uint64 avaible_space = 2;
  optional uint64 used_space = 3;
  optional string kind = 4;
  optional string file_system = 5;
  optional bool is_removable = 6;
  optional string mount = 7;
}

message RamFetch {
  optional uint64 total_memory = 1;
  optional uint64 used_memory = 2;
  optional uint64 free_memory = 3;
  optional uint64 avaible_memory = 4;
  optional uint64 total_swap = 5;
  optional uint64 used_swap = 6;
  optional uint64 free_swap = 7;
}

message SuperFetch {
  optional CpuFetch cpu = 1;
  optional SysFetch sys = 2;
  optional MntFetch mnt = 3;
  optional DrvFetch drv = 4;
  optional RamFetch ram = 5;
}

service Fetch {
  rpc Super(google.protobuf.Empty) returns (SuperFetch) {}
}